--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,58 +1,40 @@
-name: Build app for OpenWrt
+name: Build OpenWrt Project
 
 on:
-  workflow_dispatch:  # برای استارت دستی
+  workflow_dispatch:  # شروع به صورت دستی
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    # Step 1: Checkout the code
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    # Step 2: Set up Python
-    - name: Set up Python 3
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up OpenWrt environment
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential libncurses5-dev gawk git zlib1g-dev
+          git clone https://github.com/openwrt/openwrt.git
+          cd openwrt
+          
+      - name: Clone the project from GitHub (using config.yaml)
+        run: |
+          PROJECT_URL=$(yq eval '.project_url' config.yaml)
+          git clone $PROJECT_URL openwrt/project
 
-    # Step 3: Install dependencies
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y curl python3-pip jq
-        python3 -m pip install --upgrade pip
-        pip install pyyaml
+      - name: Generate OpenWrt .config file
+        run: |
+          python3 scripts/generate_config_from_yaml.py config.yaml openwrt/.config
 
-        # Install yq
-        YQ_URL="https://github.com/mikefarah/yq/releases/download/v4.34.1/yq_linux_amd64"
+      - name: Build the project for OpenWrt
+        run: |
+          cd openwrt
+          make defconfig
+          make V=s  # یا هر دستور خاص برای ساخت
 
-        curl -LO "$YQ_URL"
-        sudo chmod +x yq_linux_amd64
-        sudo mv yq_linux_amd64 /usr/local/bin/yq
-
-    # Step 4: Ensure .config is a file and create from config.yaml
-    - name: Ensure .config is a file and create from config.yaml
-      run: |
-        if [ -d "openwrt/.config" ]; then
-          rm -rf openwrt/.config
-        fi
-        touch openwrt/.config
-        python3 scripts/generate_config_from_yaml.py /home/runner/work/owapp-compiler/owapp-compiler/config.yaml /home/runner/work/owapp-compiler/owapp-compiler/openwrt/.config
-
-    # Step 5: Build the package
-    - name: Build package
-      run: |
-        cd openwrt
-        make package/luci-theme-peditx/compile V=s
-
-    # Step 6: Upload the generated ipk as artifact
-    - name: Upload ipk as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ipk-artifact
-        path: openwrt/bin/packages/*/*.ipk
-        if-no-files-found: warn
-        include-hidden-files: false
+      - name: Upload .ipk files as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ipk-artifact
+          path: openwrt/bin/packages/*/*.ipk
+          if-no-files-found: warn
